--- a/travis.yml
+++ b/travis.yml
@@ -35,5 +35,6 @@ addons:
     - gcc-4.8
 # script needed to test, because defaults don't work on osx
 script:
-  - npm install
+  # - npm install
+  - yarn
 - npm run lint
