Resetting yarn lock & deployment

--- a/travis.yml
+++ b/travis.yml
@@ -35,6 +35,5 @@ addons:
     - gcc-4.8
 # script needed to test, because defaults don't work on osx
 script:
-  # - npm install
-  - yarn
+  - npm install
 - npm run lint
