--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   "dependencies": {
     "animate.css": "^3.5.2",
     "bluebird": "^3.5.1",
-    "gatsby": "^1.9.164",
+    "gatsby": "^1.9.194",
     "gatsby-link": "^1.6.34",
     "gatsby-plugin-catch-links": "^1.0.14",
     "gatsby-plugin-feed": "^1.3.15",
     "gatsby-plugin-google-analytics": "^1.0.15",
-    "gatsby-plugin-google-fonts": "latest",
+    "gatsby-plugin-google-fonts": "0.0.3",
     "gatsby-plugin-offline": "^1.0.12",
     "gatsby-plugin-postcss-sass": "^1.0.15",
     "gatsby-plugin-react-helmet": "^2.0.3",
@@ -46,6 +46,7 @@
     "gatsby-transformer-remark": "^1.7.28",
     "gatsby-transformer-sharp": "^1.6.16",
     "lodash": "^4.17.4",
+    "postcss-brunch": "^2.1.0",
     "react": "^15.6.1",
     "react-disqus-comments": "^1.1.1",
     "react-helmet": "^5.2.0"
