--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "scripts": {
     "dev": "gatsby develop",
     "develop": "gatsby develop",
-    "build": "gatsby build"
+    "build": "gatsby build",
+    "deploy": "gatsby build --prefix-links && gh-pages -d public"
   }
 }
