--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "deploy": "gatsby build --prefix-links && gh-pages -d public"
   },
   "dependencies": {
+    "disqus-react": "^1.0.5",
     "flexboxgrid": "^6.3.1",
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.238",
