--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "flexboxgrid": "^6.3.1",
     "font-awesome": "^4.7.0",
     "gatsby": "^1.9.238",
+    "gatsby-image": "^1.0.55",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-google-analytics": "^1.0.24",
     "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-sass": "^1.0.23",
+    "gatsby-plugin-sharp": "^1.6.48",
     "gatsby-remark-images": "^1.5.67",
+    "gatsby-transformer-sharp": "^1.6.27",
     "highlight.js": "^9.12.0",
     "include-media": "^1.4.9",
     "milligram-scss": "^1.3.0",
