--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "deploy": "gatsby build --prefix-links && gh-pages -d public"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "disqus-react": "^1.0.5",
     "flexboxgrid": "^6.3.1",
     "font-awesome": "^4.7.0",
@@ -29,6 +32,7 @@
     "include-media": "^1.4.9",
     "milligram-scss": "^1.3.0",
     "prismjs": "^1.15.0",
+    "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.2.0"
   },
   "devDependencies": {
