--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "include-media": "^1.4.9",
     "milligram-scss": "^1.3.0",
     "prismjs": "^1.15.0",
+    "react-burger-menu": "^2.5.2",
     "react-fontawesome": "^1.6.1",
     "react-helmet": "^5.2.0"
   },
