--- a/package.json
+++ b/package.json
@@ -25,17 +25,23 @@
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-google-analytics": "^1.0.24",
     "gatsby-plugin-google-fonts": "0.0.4",
+    "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-sass": "^1.0.23",
     "gatsby-plugin-sharp": "^1.6.48",
     "gatsby-remark-images": "^1.5.67",
     "gatsby-transformer-sharp": "^1.6.27",
     "highlight.js": "^9.12.0",
     "include-media": "^1.4.9",
+    "install": "^0.12.1",
     "milligram-scss": "^1.3.0",
+    "npm": "^6.4.1",
     "prismjs": "^1.15.0",
     "react-burger-menu": "^2.5.2",
     "react-helmet": "^5.2.0",
-    "react-lazyload": "^2.3.0"
+    "react-lazyload": "^2.3.0",
+    "react-spring": "^5.8.0",
+    "typeface-chivo": "0.0.54",
+    "typeface-open-sans": "0.0.54"
   },
   "devDependencies": {
     "gatsby-remark-copy-linked-files": "^1.5.37",
