--- a/package.json
+++ b/package.json
@@ -17,17 +17,18 @@
     "@fortawesome/free-brands-svg-icons": "^5.3.1",
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
-    "cloudinary-react": "^1.0.6",
     "disqus-react": "^1.0.5",
     "flexboxgrid": "^6.3.1",
     "gatsby": "^1.9.277",
     "gatsby-image": "^1.0.55",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-google-analytics": "^1.0.24",
-    "gatsby-plugin-google-fonts": "0.0.4",
+    "gatsby-plugin-guess-js": "^1.0.0",
+    "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-sass": "^1.0.23",
     "gatsby-plugin-sharp": "^1.6.48",
+    "gatsby-plugin-subfont": "^1.0.1",
     "gatsby-remark-images": "^1.5.67",
     "gatsby-transformer-sharp": "^1.6.27",
     "highlight.js": "^9.12.0",
@@ -47,7 +48,6 @@
     "gatsby-remark-copy-linked-files": "^1.5.37",
     "gatsby-remark-prismjs": "^2.0.5",
     "gatsby-source-filesystem": "^1.5.39",
-    "gatsby-transformer-remark": "^1.7.44",
-    "styled-components": "^3.4.5"
+    "gatsby-transformer-remark": "^1.7.44"
   }
 }
