Further optimized page build & load time. Improved Cloudinary image optimization

--- a/package.json
+++ b/package.json
@@ -40,9 +40,7 @@
     "react-burger-menu": "^2.5.2",
     "react-helmet": "^5.2.0",
     "react-lazyload": "^2.3.0",
-    "react-spring": "^5.8.0",
-    "typeface-chivo": "0.0.54",
-    "typeface-open-sans": "0.0.54"
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "gatsby-remark-copy-linked-files": "^1.5.37",
