--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "gatsby-image": "^1.0.55",
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-google-analytics": "^1.0.24",
-    "gatsby-plugin-google-fonts": "0.0.4",
     "gatsby-plugin-guess-js": "^1.0.0",
     "gatsby-plugin-sass": "^1.0.23",
     "gatsby-plugin-sharp": "^1.6.48",
@@ -38,7 +37,9 @@
     "prismjs": "^1.15.0",
     "react-burger-menu": "^2.5.2",
     "react-helmet": "^5.2.0",
-    "react-lazyload": "^2.3.0"
+    "react-lazyload": "^2.3.0",
+    "typeface-chivo": "0.0.54",
+    "typeface-open-sans": "0.0.54"
   },
   "devDependencies": {
     "gatsby-remark-copy-linked-files": "^1.5.37",
